<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="dialog_make_choose">Make choose</string>
    <string name="description">Description</string>
    <string name="wind">Wind</string>
    <string name="temp_min">Temp Min</string>
    <string name="temp_max">Temp Max</string>
    <string name="name">Name</string>
    <string name="pressure">Pressure</string>
    <string name="local_time">Local Time</string>
    <string name="weather_time">Weather Time</string>
</resources>
